# l5p-rgb

./: Cargo.toml
l5p-app/: package.json
l5p-app/src/: App.tsx  api.ts  color.ts  config.ts  effect.ts  main.tsx  style.css
l5p-app/src-tauri/: Cargo.toml  tauri.conf.json
l5p-app/src-tauri/icons/: icon.icns
l5p-app/src-tauri/src/: error.rs  main.rs
l5p-app/src/components/: BreathEffect.tsx  Brightness.tsx  ColorPicker.tsx  ColorZone.tsx  DirectionPicker.tsx  EffectPicker.tsx  SmoothEffect.tsx  Spacer.tsx  Speed.tsx  StaticEffect.tsx  WaveEffect.tsx
l5p-cli/: Cargo.toml
l5p-cli/src/: cli.rs  main.rs
l5p-rgb/: Cargo.toml
l5p-rgb/src/: effect.rs  keyboard.rs  lib.rs  ranged.rs
l5p-rgb/src/effect/: brightness.rs  color.rs  direction.rs  mod.rs  speed.rs
