[package]
name = "l5p-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
csscolorparser = { version = "0.6.2" }
l5p-rgb = { path = "../l5p-rgb" }
